Adding initial, wip, support for Eventing in CloudState